package gabriel.fontes.br.quarkus.Model;

import jakarta.persistence.MappedSuperclass;

@MappedSuperclass
public class Pessoa extends DefaultEntity {

    private String nome;
    private String email;

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    public String getEmail() {
        return email;
    }

    public void setEmail(String email) {
        this.email = email;
    }
    }
